@@ -75,8 +75,20 @@ name|Properties
 import|;
 end_import
 
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|IvyContext
+import|;
+end_import
+
 begin_comment
-comment|/**  * @author x.hanin  *  */
+comment|/**  *   * @author Xavier Hanin  * @author Gilles Scokart  */
 end_comment
 
 begin_class
@@ -132,13 +144,6 @@ literal|4
 decl_stmt|;
 specifier|private
 specifier|static
-name|MessageImpl
-name|_impl
-init|=
-literal|null
-decl_stmt|;
-specifier|private
-specifier|static
 name|List
 name|_problems
 init|=
@@ -187,9 +192,15 @@ name|MessageImpl
 name|impl
 parameter_list|)
 block|{
-name|_impl
-operator|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|setMessageImpl
+argument_list|(
 name|impl
+argument_list|)
 expr_stmt|;
 name|showInfo
 argument_list|()
@@ -205,9 +216,15 @@ name|MessageImpl
 name|impl
 parameter_list|)
 block|{
-name|_impl
-operator|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|setMessageImpl
+argument_list|(
 name|impl
+argument_list|)
 expr_stmt|;
 block|}
 specifier|public
@@ -217,7 +234,13 @@ name|getImpl
 parameter_list|()
 block|{
 return|return
-name|_impl
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
 return|;
 block|}
 specifier|public
@@ -227,7 +250,13 @@ name|isInitialised
 parameter_list|()
 block|{
 return|return
-name|_impl
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
 operator|!=
 literal|null
 return|;
@@ -339,14 +368,25 @@ name|String
 name|msg
 parameter_list|)
 block|{
+name|MessageImpl
+name|messageImpl
+init|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
-name|_impl
+name|messageImpl
 operator|.
 name|log
 argument_list|(
@@ -378,14 +418,25 @@ name|String
 name|msg
 parameter_list|)
 block|{
+name|MessageImpl
+name|messageImpl
+init|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
-name|_impl
+name|messageImpl
 operator|.
 name|log
 argument_list|(
@@ -417,14 +468,25 @@ name|String
 name|msg
 parameter_list|)
 block|{
+name|MessageImpl
+name|messageImpl
+init|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
-name|_impl
+name|messageImpl
 operator|.
 name|log
 argument_list|(
@@ -456,14 +518,25 @@ name|String
 name|msg
 parameter_list|)
 block|{
+name|MessageImpl
+name|messageImpl
+init|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
-name|_impl
+name|messageImpl
 operator|.
 name|log
 argument_list|(
@@ -513,16 +586,27 @@ name|String
 name|msg
 parameter_list|)
 block|{
+name|MessageImpl
+name|messageImpl
+init|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
 comment|// log in verbose mode because message is appended as a problem, and will be
 comment|// logged at the end at error level
-name|_impl
+name|messageImpl
 operator|.
 name|log
 argument_list|(
@@ -594,6 +678,17 @@ argument_list|(
 literal|"\n:: problems summary ::"
 argument_list|)
 expr_stmt|;
+name|MessageImpl
+name|messageImpl
+init|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|_warns
@@ -639,12 +734,12 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
-name|_impl
+name|messageImpl
 operator|.
 name|log
 argument_list|(
@@ -717,12 +812,12 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
-name|_impl
+name|messageImpl
 operator|.
 name|log
 argument_list|(
@@ -783,14 +878,25 @@ condition|(
 name|_showProgress
 condition|)
 block|{
+name|MessageImpl
+name|messageImpl
+init|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
-name|_impl
+name|messageImpl
 operator|.
 name|progress
 argument_list|()
@@ -836,14 +942,25 @@ condition|(
 name|_showProgress
 condition|)
 block|{
+name|MessageImpl
+name|messageImpl
+init|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getMessageImpl
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|_impl
+name|messageImpl
 operator|!=
 literal|null
 condition|)
 block|{
-name|_impl
+name|messageImpl
 operator|.
 name|endProgress
 argument_list|(
@@ -883,9 +1000,15 @@ name|void
 name|uninit
 parameter_list|()
 block|{
-name|_impl
-operator|=
+name|IvyContext
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|setMessageImpl
+argument_list|(
 literal|null
+argument_list|)
 expr_stmt|;
 block|}
 block|}
